@@ -92,6 +92,12 @@
                 </div>
             </div>
             <div class="control-group">
+                <label class="control-label" for="pattern">{label_pattern}</label>
+                <div class="controls">
+					<input type="text" name="pattern" value="{edit_value_pattern}" maxlength="255" />
+				</div>
+            </div>
+            <div class="control-group">
                 <label class="control-label" for="active">{label_monitoring}</label>
                 <div class="controls">
                     <select name="active">
